# pyratelimit

./: README.md  pyproject.toml
.github/workflows/: ci.yml  formatting-and-pyright.yml
ratelimit/: __init__.py  continuous.py
tests/: test_buffer.py  test_limiter.py
